# commentr

./: .gitignore  BackButtonHandler.h  CMakeLists.txt  CodeViewer.cpp  CodeViewer.h  CommentR.pro  Common.cpp  Common.h  Config.cpp  Config.h  ConnectionSetup.cpp  ConnectionSetup.h  CursorPointer.cpp  CursorPointerLineEdit.cpp  CursorPointerSelector.cpp  CursorPointerSelector.h  CursorPointerTextEdit.h  Defines.h  EditorTabPage.cpp  EditorTabPage.h  EditorTabPage.ui  EnhancedLineEdit.cpp  File.cpp  FtpFileSaver.cpp  FtpFileSaver.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PanGestureRecognizer.cpp  PanGestureRecognizer.h  ProxyStyle.cpp  ProxyStyle.h  README.md  SpellChecker.cpp  SpellChecker.h  codecov.yaml  comment.rc  main.cpp  sonar-project.properties
.github/workflows/: buld-and-test.yml  codeql.yml  static-analysis-and-coverage.yml
FileBrowser/: BrowseFilesWidget.cpp  BrowseFilesWidget.ui  Explorer.cpp  ExplorerFtp.cpp  ExplorerFtp.h  ExplorerLocal.cpp  ExplorerLocal.h  Local.cpp  Local.h
Highlighters/: BasicHighlighter.cpp  BasicHighlighter.h  CFamilyHighlighter.cpp  CFamilyHighlighter.h  CSharpHighlighter.cpp  CplusPlusHighlighter.cpp  Highlighter.cpp  Highlighter.h  JavaHighlighter.cpp  JavaHighlighter.h  JavaScriptHighlighter.cpp  JavaScriptHighlighter.h  ObjectiveCHighlighter.cpp  ObjectiveCHighlighter.h  PhpHighlighter.cpp  PhpHighlighter.h  PythonHighlighter.cpp  PythonHighlighter.h  SQLHighlighter.cpp  SQLHighlighter.h
PrivacyPolicy/: policy.md
Resources/: about.txt  resources.qrc  style.css
Resources/samples/: sample.cpp  sample.m  sample.php  sample.sql  sample.vb
android/: AndroidManifest.xml  build.gradle
res/: resources.qrc  uk.dic
res/keywords/: c.txt  cPlusPlus.txt  cSharp.txt  java.txt  javaScript.txt  objectiveC.txt  php.txt  sql.txt  visualBasic.txt
res/samples/: sample.c
samples/: sample.cs  sample.java  sample.js  sample.py
src/: BackButtonHandler.cpp  BackButtonHandler.h  CodeViewer.cpp  CodeViewer.h  Common.cpp  Common.h  Config.cpp  Config.h  ConnectionSetup.cpp  ConnectionSetup.h  ConnectionSetup.ui  CursorPointer.cpp  CursorPointer.h  CursorPointerLineEdit.cpp  CursorPointerLineEdit.h  CursorPointerSelector.cpp  CursorPointerSelector.h  CursorPointerTextEdit.cpp  CursorPointerTextEdit.h  Defines.h  EditorTabPage.cpp  EditorTabPage.h  EnhancedLineEdit.cpp  EnhancedLineEdit.h  File.cpp  File.h  FtpFileSaver.cpp  FtpFileSaver.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PanGestureRecognizer.cpp  PanGestureRecognizer.h  ProxyStyle.cpp  ProxyStyle.h  SpellChecker.cpp  SpellChecker.h  SyntaxElement.h  SyntaxLang.h  main.cpp
src/FileBrowser/: BrowseFilesWidget.cpp  BrowseFilesWidget.h  Explorer.cpp  Explorer.h  ExplorerFtp.cpp  ExplorerFtp.h  ExplorerLocal.cpp  ExplorerLocal.h  FileAccessMode.h  FileExplorer.cpp  FileExplorer.h  Local.cpp  Local.h
src/Highlighters/: BasicHighlighter.cpp  BasicHighlighter.h  CFamilyHighlighter.cpp  CFamilyHighlighter.h  CHighlighter.cpp  CHighlighter.h  CMakeLists.txt  CPlusPlusHighlighter.cpp  CPlusPlusHighlighter.h  CSharpHighlighter.cpp  CSharpHighlighter.h  CplusPlusHighlighter.cpp  CplusPlusHighlighter.h  Highlighter.cpp  Highlighter.h  JavaHighlighter.cpp  JavaHighlighter.h  JavaScriptHighlighter.cpp  JavaScriptHighlighter.h  ObjectiveCHighlighter.cpp  ObjectiveCHighlighter.h  PhpHighlighter.cpp  PhpHighlighter.h  PythonHighlighter.cpp  PythonHighlighter.h  SQLHighlighter.cpp  SQLHighlighter.h  VisualBasicHighlighter.cpp  VisualBasicHighlighter.h
tests/: CHighlighterTest.cpp  CHighlighterTest.h  CMakeLists.txt  CPlusPlusHighlighterTest.cpp  CPlusPlusHighlighterTest.h  CSharpHighlighterTest.cpp  CSharpHighlighterTest.h  CommonTest.cpp  CommonTest.h  ConfigTest.cpp  CplusPlusHighlighterTest.cpp  CplusPlusHighlighterTest.h  FileExplorerTest.cpp  FileTest.cpp  FileTest.h  HighlighterSpellCheckTest.cpp  HighlighterSpellCheckTest.h  HighlighterTestHelpers.cpp  HighlighterTestHelpers.h  JavaHighlighterTest.cpp  JavaHighlighterTest.h  JavaScriptHighlighterTest.cpp  JavaScriptHighlighterTest.h  ObjectiveCHighlighterTest.cpp  ObjectiveCHighlighterTest.h  PanGestureRecognizerTest.cpp  PanGestureRecognizerTest.h  PhpHighlighterTest.cpp  PhpHighlighterTest.h  ProxyStyleTest.cpp  ProxyStyleTest.h  PythonHighlighterTest.cpp  PythonHighlighterTest.h  SQLHighlighterTest.cpp  SQLHighlighterTest.h  SomeTest.cpp  SomeTest.h  SpellCheckerTest.cpp  SpellCheckerTest.h  TestCommon.cpp  (+7 more)
